[feat] setup auth middleware and use firebase id as primary key
