# docs/swagger.json
@@ -14,47 +14,6 @@
     "basePath": "/api/v1",
     "paths": {
         "/orders": {
-            "get": {
-                "security": [
-                    {
-                        "jwt": []
-                    }
-                ],
-                "description": "Get a list of all orders",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "orders"
-                ],
-                "summary": "Get all orders",
-                "responses": {
-                    "200": {
-                        "description": "List of Orders",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Order"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "order not found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "failed to get orders",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -105,14 +64,14 @@
                 }
             }
         },
-        "/orders/{id}": {
+        "/orders/restaurant": {
             "get": {
                 "security": [
                     {
                         "jwt": []
                     }
                 ],
-                "description": "Get a order",
+                "description": "Get all orders for a restaurant",
                 "consumes": [
                     "application/json"
                 ],
@@ -122,27 +81,15 @@
                 "tags": [
                     "orders"
                 ],
-                "summary": "Get a order",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Order ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Get all orders for a restaurant",
                 "responses": {
                     "200": {
-                        "description": "Order",
+                        "description": "Restaurant Orders",
                         "schema": {
-                            "$ref": "#/definitions/models.Order"
-                        }
-                    },
-                    "400": {
-                        "description": "invalid order ID",
-                        "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Order"
+                            }
                         }
                     },
                     "404": {
@@ -152,13 +99,58 @@
                         }
                     },
                     "500": {
-                        "description": "failed to get order",
+                        "description": "failed to get orders",
                         "schema": {
                             "type": "string"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/orders/user": {
+            "get": {
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
+                "description": "Get all orders for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Get all orders for a user",
+                "responses": {
+                    "200": {
+                        "description": "User Orders",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Order"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "order not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "failed to get orders",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/{id}": {
             "put": {
                 "security": [
                     {
@@ -765,7 +757,7 @@
                     "type": "string"
                 },
                 "restaurant_id": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -841,7 +833,7 @@
                     "type": "integer"
                 },
                 "restaurant_id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "state": {
                     "type": "string"
@@ -850,7 +842,7 @@
                     "type": "string"
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -866,11 +858,8 @@
                 "created_at": {
                     "type": "string"
                 },
-                "fb_user_id": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "latitude": {
                     "type": "number"
@@ -919,13 +908,13 @@
                     "type": "string"
                 },
                 "restaurant_id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "state": {
                     "type": "string"
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -985,11 +974,8 @@
         "models.UserResponse": {
             "type": "object",
             "properties": {
-                "fb_user_id": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "is_active": {
                     "type": "boolean"
