# internal/app/tamra/routes/user_router.go
@@ -9,13 +9,13 @@ import (
 )
 
 type UserRouter struct {
-	userHandler   *handlers.UserHandler
-	authMiddlware func(http.Handler) http.Handler
-	logger        logrus.FieldLogger
+	userHandler       *handlers.UserHandler
+	userAuthMiddlware func(http.Handler) http.Handler
+	logger            logrus.FieldLogger
 }
 
-func NewUserRouter(userHandler *handlers.UserHandler, authMiddleware func(http.Handler) http.Handler, logger logrus.FieldLogger) *UserRouter {
-	return &UserRouter{userHandler: userHandler, authMiddlware: authMiddleware, logger: logger}
+func NewUserRouter(userHandler *handlers.UserHandler, userAuthMiddlware func(http.Handler) http.Handler, logger logrus.FieldLogger) *UserRouter {
+	return &UserRouter{userHandler: userHandler, userAuthMiddlware: userAuthMiddlware, logger: logger}
 }
 
 // ? Is this an overkill? Should we just return a chi.Router instead of a chi.Router wrapped in a Router struct?
@@ -25,9 +25,9 @@ func (router *UserRouter) GetRouter() chi.Router {
 	// Use the authMiddleware for all routes in the user route
 	// Middleware checks if the token is valid and if it is, it will call the next handler in the chain
 	// It will also append the UUID of the user to the request context so we can use it in the handler
-	r.Use(router.authMiddlware)
+	r.Use(router.userAuthMiddlware)
 	r.Post("/", router.userHandler.CreateUser)
-	r.Get("/", router.userHandler.GetUsers)
+	// r.Get("/", router.userHandler.GetUsers)
 	r.Get("/me", router.userHandler.GetUser)
 	r.Patch("/me", router.userHandler.UpdateUser)
 	return r
