# internal/pkg/models/restaurant.go
@@ -5,14 +5,13 @@ import (
 )
 
 type Restaurant struct {
-	ID        int       `json:"id"`
+	ID        string    `json:"id"`
 	Longitude float64   `json:"longitude" validate:"required"`
 	Latitude  float64   `json:"latitude" validate:"required"`
 	LogoURL   string    `json:"logo_url" validate:"required,url"`
 	Name      string    `json:"name" validate:"required"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
-	FBUserID  string    `json:"fb_user_id"`
 }
 
 type CreateRestaurantRequest struct {
@@ -30,12 +29,11 @@ type UpdateRestaurantRequest struct {
 }
 
 type RestaurantResponse struct {
-	ID        int       `json:"id"`
+	ID        string    `json:"id"`
 	Longitude float64   `json:"longitude"`
 	Latitude  float64   `json:"latitude"`
 	LogoURL   string    `json:"logo_url"`
 	Name      string    `json:"name"`
-	FBUserID  string    `json:"fb_user_id"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
